--- a/resume.tex
+++ b/resume.tex
@@ -149,7 +149,7 @@
             {Vidyalankar Institute of Technology}{Mumbai, India}
             {Bachelor of Technology in Computer Engineering}{Sept 2024 -- Present}
             \resumeItemListStart
-                \resumeItem{CGPA: \textbf{10.0} (First Year), SGPS: \textbf{10.0} (Sem 3)}
+                \resumeItem{CGPA: \textbf{10.0} (First Year), SGPA: \textbf{10.0} (Sem 3)}
                 \resumeItem{Expected Graduation: \textbf{2028}}
             \resumeItemListEnd
 
