--- a/resume.tex
+++ b/resume.tex
@@ -133,13 +133,33 @@
 % \end{tabular*}
 
 \begin{center}
-    {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{1pt}
-    \small
-    +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{\underline{ankushhkapoor.vercel.app}} $|$
-    \href{mailto:work.ankushkapoor1626@gmail.com}{\underline{work.ankushkapoor1626@gmail.com}} \\
-    \href{https://github.com/ankushhKapoor}{\underline{github.com/ankushhKapoor}} $|$
-    \href{https://linkedin.com/in/ankushhKapoor}{\underline{linkedin.com/in/ankushhKapoor}}    \vspace{-8pt}
+    {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{5pt}
+    % \footnotesize
+    % +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app} $|$
+    % \href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com} \\
+    % \href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor} $|$
+    % \href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}    \vspace{-8pt}
+   \small
+    \mbox{%
+    \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app}\hspace{0.2em}$|$\hspace{0.2em}\href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com}%
+    }
+    \vspace{-17pt}
 \end{center}
+
+% \begin{center}
+%     {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{7pt}
+%     {
+%         \hypersetup{urlcolor=black}
+%     \normalsize
+%     \faGlobe\ \href{https://ankushhkapoor.vercel.app}{Portfolio}
+%     \hspace{5em}
+%     \faEnvelope\ \href{mailto:work.ankushkapoor1626@gmail.com}{Email}
+%     \hspace{5em}
+%     \faLinkedinIn\ \href{https://linkedin.com/in/ankushhkapoor}{ankushhkapoor}
+%     \hspace{5em}
+%     \faGithub\ \href{https://github.com/ankushhKapoor}{ankushhKapoor}
+%     }
+% \end{center}
 
 
 % -----------EDUCATION-----------
@@ -162,7 +182,7 @@
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 % \vspace{-18pt}
-\vspace{-15pt}
+\vspace{-12pt}
 
 
 % -----------EXPERIENCE-----------
@@ -179,8 +199,8 @@
         \resumeItem{\textbf{Technologies:} Python, Pytest, l10n, Git , GitHub}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
-\vspace{-15pt}
-% \vspace{-12pt}
+% \vspace{-10pt}
+\vspace{-12pt}
 
 
 % -----------INTERNSHIPS-----------
@@ -202,46 +222,44 @@
 %                 \resumeItem{Enhanced documentation by enforcing the OpenAPI 3.1.0 standard and adding situational code samples}
 %             \resumeItemListEnd
 %     \resumeSubHeadingListEnd
-% \vspace{-15pt}
+% \vspace{-10pt}
 
 
 % -----------PROJECTS-----------
 \section{Projects}
-    \vspace{-6pt}
+    \vspace{-5pt}
     \resumeSubHeadingListStart
         \resumeProjectHeading
-            {\textbf{\normalsize{Transformer From Scratch (Neural Machine Translation)}} $|$ \emph{Python, PyTorch, CUDA, TensorBoard}}{\href{https://github.com/ankushhKapoor/transformer-from-scratch}{\underline{GitHub}}}
+            {\textbf{\normalsize{Transformer From Scratch (Neural Machine Translation)}} $|$ \emph{Python, PyTorch}}{\href{https://github.com/ankushhKapoor/transformer-from-scratch}{GitHub}}
             \resumeItemListStart
-                \resumeItem{Implemented complete \textbf{Transformer architecture from scratch} based on \textbf{Attention Is All You Need}, using \textbf{PyTorch}.}
-                \resumeItem{Built \textbf{multi-head self/cross attention}, \textbf{encoder–decoder blocks}, \textbf{positional encoding}, \textbf{feed forward}, \textbf{masking}, and \textbf{projection layers manually}.}
-                \resumeItem{Trained a bilingual \textbf{NMT model} on \textbf{OPUS Books} with configurable language pairs, achieving strong translation quality using \textbf{greedy} and \textbf{beam search decoding}.}
-                \resumeItem{Implemented \textbf{learning-rate warmup + inverse square-root decay}, \textbf{label smoothing}, checkpointing, and resume logic.}
-                \resumeItem{Evaluated models using \textbf{SacreBLEU}, \textbf{WER}, and \textbf{CER}, with full experiment tracking via \textbf{TensorBoard}.}
+               \resumeItem{Developed a complete \textbf{Transformer architecture} from scratch using \textbf{PyTorch}, manually building \textbf{multi-head attention}, \textbf{encoder-decoder blocks}, and \textbf{positional encoding}.}
+                \resumeItem{Trained a bilingual \textbf{NMT model} on \textbf{OPUS Books} using \textbf{greedy and beam search} decoding, implementing \textbf{learning-rate warmup} and \textbf{label smoothing} for optimized convergence.}
+                \resumeItem{Evaluated performance using \textbf{SacreBLEU, WER, and CER} metrics, utilizing \textbf{TensorBoard} for experiment tracking and checkpointing logic.}
             \resumeItemListEnd
-        \vspace{-15pt}
+        \vspace{-10pt}
 
 
         \resumeProjectHeading
-            {\textbf{\normalsize{BaseKernel (Custom 32 bit Kernel)}} $|$ \emph{C, NASM, QEMU, GCC, Linux}}{\href{https://github.com/ankushhKapoor/BaseKernel}{\underline{GitHub}}}
+            {\textbf{\normalsize{BaseKernel (Custom 32 bit Kernel)}} $|$ \emph{C, NASM, QEMU}}{\href{https://github.com/ankushhKapoor/BaseKernel}{GitHub}}
             \resumeItemListStart
                 \resumeItem{Built a \textbf{32-bit protected mode} kernel from scratch, \textbf{bootstrapped} from \textbf{real mode}.}
             \resumeItem{Implemented \textbf{bootloader}, \textbf{GDT}, \textbf{IDT}, \textbf{ISR}, and \textbf{IRQ} handling for low-level system control.}
                 \resumeItem{Added \textbf{memory paging}, \textbf{screen output} along with a \textbf{Round Robin scheduler} to enable fair CPU time allocation across tasks.}
                 \resumeItem{Developed entirely without standard libraries to achieve bare-metal execution.}
             \resumeItemListEnd
-        \vspace{-15pt}
+        \vspace{-10pt}
 
         % \resumeProjectHeading
-        %     {\textbf{\normalsize{KapoorVM (Custom Virtual Machine in C)}} $|$ \emph{C, Linux, GCC}}{\href{https://github.com/ankushhKapoor/KapoorVM}{\underline{GitHub}}}
+        %     {\textbf{\normalsize{KapoorVM (Custom Virtual Machine in C)}} $|$ \emph{C, Linux, GCC}}{\href{https://github.com/ankushhKapoor/KapoorVM}{GitHub}}
         %     \resumeItemListStart
         %         \resumeItem{Built a 16-bit virtual CPU with a custom instruction set and 65 KB of virtual memory.}
         %         \resumeItem{Implemented basic opcodes to move immediate values into registers and run a test program.}
         %         \resumeItem{Designed modular VM components for clean separation of CPU, memory, and instruction handling.}
         %     \resumeItemListEnd
-        % \vspace{-15pt}
+        % \vspace{-10pt}
 
         \resumeProjectHeading
-            {\textbf{\normalsize{Alloc (Custom Memory Allocator in C)}} $|$ \emph{C, Linux, NASM, GCC}}{\href{https://github.com/ankushhKapoor/alloc}{\underline{GitHub}}}
+            {\textbf{\normalsize{Alloc (Custom Memory Allocator in C)}} $|$ \emph{C, NASM}}{\href{https://github.com/ankushhKapoor/alloc}{GitHub}}
             \resumeItemListStart
         \resumeItem{Created a 32-bit allocator mimicking \textbf{malloc()} and \textbf{free()} over a 1 GB virtual heap.}
                 \resumeItem{Implemented \textbf{alloc(bytes)} to allocate memory in words by taking size in bytes as input.}
@@ -249,19 +267,19 @@
                 \resumeItem{Built packed headers, manual tracking, macros for KB/MB/GB allocation, and a \textbf{show()} debugger.}
             \resumeItemListEnd
         \resumeSubHeadingListEnd
-        \vspace{-15pt}
+        \vspace{-12pt}
 
     %     \resumeProjectHeading
-    %         {\textbf{\normalsize{Advanced Research AI Agent}} $|$ \emph{Python, LangGraph, Ollama, BrightData API}}{\href{https://github.com/ankushhKapoor/Advanced-Research-AI-Agent}{\underline{GitHub}}}
+    %         {\textbf{\normalsize{Advanced Research AI Agent}} $|$ \emph{Python, LangGraph, Ollama, BrightData API}}{\href{https://github.com/ankushhKapoor/Advanced-Research-AI-Agent}{GitHub}}
     %         \resumeItemListStart
     %             \resumeItem{Built an AI research assistant that retrieves data from Google, Bing, and Reddit to generate context-rich answers.}
     %             \resumeItem{Used \textbf{LangGraph} for workflow orchestration and \textbf{Ollama LLM} for multi-source reasoning and synthesis.}
     %             \resumeItem{Integrated \textbf{BrightData APIs} for automated web search and Reddit discussion analysis.}
     %         \resumeItemListEnd
-    %     \vspace{-15pt}
+    %     \vspace{-10pt}
 
     %     \resumeProjectHeading
-    %         {\textbf{\normalsize{WikiSpeedRunner}} $|$ \emph{Python, SBERT, Gemini API, Playwright}}{\href{https://github.com/ankushhKapoor/WikiSpeedRunner}{\underline{GitHub}}}
+    %         {\textbf{\normalsize{WikiSpeedRunner}} $|$ \emph{Python, SBERT, Gemini API, Playwright}}{\href{https://github.com/ankushhKapoor/WikiSpeedRunner}{GitHub}}
     %         \resumeItemListStart
     %             \resumeItem{Built an agent that speedruns through Wikipedia pages by selecting the most relevant outgoing link at each step.}
     %             \resumeItem{Implemented two players: a fast \textbf{SBERT} vector-similarity model and a reasoning-based \textbf{Gemini LLM} agent for accurate pathfinding.}
@@ -269,10 +287,10 @@
     %             \resumeItem{Added run tracking with JSON logging, performance metrics, and optional browser visualisation for real-time playback.}
     %         \resumeItemListEnd
     %     \resumeSubHeadingListEnd
-    % \vspace{-15pt}
+    % \vspace{-10pt}
 
 %         \resumeProjectHeading
-%             {\textbf{\normalsize{CodeNexus (Custom Code Editor for Python)}} $|$ \emph{Python, PyQt5, QScintilla, Jedi}}{\href{https://github.com/ankushhKapoor/CodeNexus-Custom-Python-Editor-IDE}{\underline{GitHub}}}
+%             {\textbf{\normalsize{CodeNexus (Custom Code Editor for Python)}} $|$ \emph{Python, PyQt5, QScintilla, Jedi}}{\href{https://github.com/ankushhKapoor/CodeNexus-Custom-Python-Editor-IDE}{GitHub}}
 %             \resumeItemListStart
 %                 \resumeItem{Developed a tab-based code editor with syntax highlighting, file explorer, and autocomplete.}
 %                 \resumeItem{Implemented a threaded AutoCompleter using \textbf{jedi} and a custom \textbf{QsciLexer}.}
@@ -280,7 +298,7 @@
 %                 \resumeItem{Integrated file actions with \textbf{QTreeView} and added keyboard shortcuts.}
 %             \resumeItemListEnd
 %     \resumeSubHeadingListEnd
-% \vspace{-15pt}
+% \vspace{-10pt}
 
 
 % -----------EXTRACURRICULAR ACTIVITY-----------
@@ -295,7 +313,7 @@
                 \resumeItem{Manage and grow a vibrant, inclusive, and open for all tech-driven community.}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
-\vspace{-15pt}
+\vspace{-12pt}
 
     
 % -----------SKILLS-----------
