update extracurricular, skills section and fix ordering

--- a/resume.tex
+++ b/resume.tex
@@ -127,23 +127,19 @@
 
 
 % ----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
 
 \begin{center}
     {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{5pt}
     % \footnotesize
-    % +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app} $|$
-    % \href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com} \\
-    % \href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor} $|$
-    % \href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}    \vspace{-8pt}
-   \small
-    \mbox{%
-    \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app}\hspace{0.2em}$|$\hspace{0.2em}\href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com}%
-    }
-    \vspace{-17pt}
+    +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app} $|$
+    \href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com} \\
+    \href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor} $|$
+    \href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}    \vspace{-8pt}
+%    \small
+%     \mbox{%
+%     \href{https://ankushhkapoor.vercel.app}{ankushhkapoor.vercel.app}\hspace{0.2em}$|$\hspace{0.2em}\href{https://github.com/ankushhKapoor}{github.com/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{https://linkedin.com/in/ankushhKapoor}{linkedin.com/in/ankushhKapoor}\hspace{0.2em}$|$\hspace{0.2em}\href{mailto:work.ankushkapoor1626@gmail.com}{work.ankushkapoor1626@gmail.com}%
+%     }
+    % \vspace{-17pt}
 \end{center}
 
 % \begin{center}
@@ -169,21 +165,21 @@
             {Vidyalankar Institute of Technology}{Mumbai, India}
             {Bachelor of Technology in Computer Engineering}{Sept 2024 -- Present}
             \resumeItemListStart
-                \resumeItem{CGPA: \textbf{10.0} (First Year), SGPA: \textbf{10.0} (Sem 3)}
+                \resumeItem{CGPA: \textbf{10.0} (First Year) $|$ SGPA: \textbf{10.0} (Sem 3)}
                 \resumeItem{Expected Graduation: \textbf{2028}}
+                \resumeItem{\textbf{Relevant Courses}: Object-Oriented Programming, Data Structures \& Algorithms, Database Management Systems}
             \resumeItemListEnd
 
-        \resumeSubheading
-            {Seth Hirachand Mutha School (CBSE Board)}{Kalyan, India}
-            {}{}
-            \vspace{-16pt}\resumeItemListStart
-                \resumeItem{Class XII - \textbf{86\%} \hspace{5.984in} 2024}
-                \resumeItem{Class X - \textbf{91\%} \hspace{6.083in} 2022}
-            \resumeItemListEnd
+        % \resumeSubheading
+        %     {Seth Hirachand Mutha School (CBSE Board)}{Kalyan, India}
+        %     {}{}
+        %     \vspace{-16pt}\resumeItemListStart
+        %         \resumeItem{Class XII - \textbf{86\%} \hspace{5.984in} 2024}
+        %         \resumeItem{Class X - \textbf{91\%} \hspace{6.083in} 2022}
+        %     \resumeItemListEnd
     \resumeSubHeadingListEnd
 % \vspace{-18pt}
 \vspace{-12pt}
-
 
 % -----------EXPERIENCE-----------
 \section{Experience}
@@ -299,36 +295,32 @@
 %             \resumeItemListEnd
 %     \resumeSubHeadingListEnd
 % \vspace{-10pt}
-
+    
+% -----------SKILLS-----------
+\section{Technical Skills}
+    \vspace{-2pt}
+    \begin{itemize}[leftmargin=0.2in, label={}]
+        {\item{
+            \begin{tabular}{ l@{\hspace{1.5in}} l }
+                 \textbf{Languages}: C, Python, Assembly, Java & \textbf{Database}: MySQL\\ 
+                  \textbf{Tools and platforms}: Git, GitHub % & \textbf{Web}: React.js, Express.js, Flask, HTML, CSS, JS \\ 
+            \end{tabular}
+        }}
+    \end{itemize}
+\vspace{-20pt}
 
 % -----------EXTRACURRICULAR ACTIVITY-----------
 \section{Extracurricular Activity}
     \resumeSubHeadingListStart
         \resumeSubheading
             {\textbf{\normalsize{Our Tech Community (OTC)}} $|$ {\normalfont \href{https://ourtech.community}{ourtech.community}}}{Jul 2025 -- Present}
-            {Core Team Member}{}
+            {Co-Organiser}{}
             \resumeItemListStart
-                \resumeItem{Contribute to planning, organizing, and executing OTC’s flagship programs including weekly \href{https://catchup.ourtech.community/}{catchups}, technical \href{https://talks.ourtech.community/}{talks}.}
-                \resumeItem{Support community operations by assisting with technical setup and maintenance for OTC events to ensure smooth execution and accessible documentation.}
-                \resumeItem{Manage and grow a vibrant, inclusive, and open for all tech-driven community.}
+                \resumeItem{Co-organize and grow a vibrant, inclusive, and open-for-all tech community of currently \textbf{600+ members}.}
+                \resumeItem{Plan, organize, and execute OTC’s \textbf{flagship programs}, including weekly \href{https://catchup.ourtech.community/}{catchups} and \textbf{technical} \href{https://talks.ourtech.community/}{talks}.}
+                \resumeItem{Oversee community operations, including \textbf{technical setup and maintenance} for events, ensuring smooth execution and \textbf{comprehensive documentation}.}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-12pt}
-
-    
-% -----------SKILLS-----------
-\section{Skills}
-    \vspace{-2pt}
-    \begin{itemize}[leftmargin=0.2in, label={}]
-        {\item{
-            \begin{tabular}{ l@{\hskip 0.2in} l }
-                \textbf{Languages}{: C, Python, Assembly, Java, MySQL} \\
-                % \textbf{Libraries}{: LangGraph, Ollama, SBERT, Playwright} \\
-                \textbf{Developer Tools}{: Git, GitHub, Makefile, VS Code, Neovim} \\
-                % \textbf{Operating Systems}{: Linux (Ubuntu), Windows}
-                % \textbf{Frameworks}{: }
-            \end{tabular}
-        }}
-    \end{itemize}
 
 \end{document}
